--- a/src/insights-app/insights-builder/builder-time/index.styl
+++ b/src/insights-app/insights-builder/builder-time/index.styl
@@ -1,7 +1,9 @@
 @import "../../../stylesheets/common"
 
 .builder-section.builder-time
+  flex-wrap initial
   position relative
+
   builder-time-edit-control
     .clause-language.preposition
       margin 0 8px
