--- a/src/insights-app/insights-builder/index.styl
+++ b/src/insights-app/insights-builder/index.styl
@@ -9,6 +9,7 @@ header-button-transition-duration = 150ms
   position relative
 
   .query,
+  .sections,
   .section-container,
   .builder-section,
   .clause-container,
